Google Log In button fully functional

--- a/web/index.html
+++ b/web/index.html
@@ -31,6 +31,9 @@
 
   <title>ReptiGram</title>
   <link rel="manifest" href="manifest.json">
+
+  <!-- Add this meta tag inside the head section -->
+  <meta name="google-signin-client_id" content="1023144692222-esbccs6kiu7d5qtnq4vp502cms2sq9hb.apps.googleusercontent.com">
 </head>
 <body>
   <script src="flutter_bootstrap.js" async></script>
