Title description added

--- a/web/index.html
+++ b/web/index.html
@@ -29,7 +29,7 @@
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
-  <title>ReptiGram</title>
+  <title>ReptiGram - A thriving hub for reptile lovers to connect, learn, and trade</title>
   <link rel="manifest" href="manifest.json">
 
   <!-- Add this meta tag inside the head section -->
