Meta Description added

--- a/web/index.html
+++ b/web/index.html
@@ -12,7 +12,9 @@
   <meta name="apple-mobile-web-app-title" content="auth_app" />
   <link rel="apple-touch-icon" href="icons/Icon-192.png" />
   <link rel="icon" type="image/png" href="favicon.png" />
-  <title>ReptiGram - Reptile Lovers Hub</title>
+  <title>ReptiGram - A Social Network for Reptile Enthusiasts</title>
+  <meta name="description" content="ReptiGram - A Social Network for Reptile Enthusiasts" />
+
   <link rel="manifest" href="manifest.json" />
   
   <meta name="google-signin-client_id" content="1023144692222-esbccs6kiu7d5qtnq4vp502cms2sq9hb.apps.googleusercontent.com" />
