--- a/web/index.html
+++ b/web/index.html
@@ -50,6 +50,18 @@
   </script>
   <!-- This script adds the flutter initialization JS code -->
   <script src="flutter.js" defer></script>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" />
+  <style>
+    html, body {
+      height: 100%;
+      margin: 0;
+      padding: 0;
+      overflow: hidden;
+    }
+    #flutter_target {
+      height: 100%;
+    }
+  </style>
 </head>
 <body>
   <script>
